--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://3.227.75.215:3306/mydb
+spring.datasource.username=jairo
+spring.datasource.password=jht3$D3Manzanilla
+spring.data.mongodb.uri=mongodb://jairo:jh%40seshat@3.227.75.215:27017/
+spring.data.mongodb.database=sofi
+#spring.jpa.show-sql: true
